# company-search

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
scripts/: index_companies.py
src/company_search/: __init__.py  __main__.py  config.py  main.py
src/company_search/api/: dependencies.py  health_router.py  router.py  tag_router.py
src/company_search/application/: search_service.py  tag_service.py
src/company_search/domain/: models.py  ports.py  query_builder.py  tag_models.py  tag_ports.py
src/company_search/infrastructure/opensearch/: client.py  index_mapping.py  repository.py  tag_index_mapping.py  tag_repository.py
src/company_search/observability/: logging.py  telemetry.py
tests/: test_query_builder.py  test_search_endpoint.py  test_tag_endpoints.py  test_tag_service.py
