[build-system]
requires = ["setuptools>=46.1.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
