[metadata]
name = company-search
version = 1.0.0
description = Company Search API using FastAPI and OpenSearch
author = Arun
license = MIT
platforms = any

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    = src

python_requires = >=3.12

install_requires =
    fastapi
    uvicorn[standard]
    pydantic-settings
    opensearch-py
    pandas
    tqdm

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-asyncio
    pytest-random-order
    pytest-httpx
    httpx
    assertpy
    ruff
    mypy
    bandit
    radon
    xenon

[tool:pytest]
addopts = --verbose
norecursedirs =
    .git
    .tox
    dist
    build
    __pycache__
testpaths = tests

[flake8]
max_line_length = 120
exclude =
    .tox
    build
    dist
    .eggs
    __pycache__

[isort]
profile = black
line_length = 120
